--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-pdf-js": "^5.1.0",
+    "react-scripts": "3.0.1",
+    "reactjs-pdf-reader": "^1.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
