--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "react-pdf",
+  "name": "pdf",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-pdf-js": "^5.1.0",
-    "react-scripts": "3.0.1",
-    "reactjs-pdf-reader": "^1.0.8"
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-pdf": "^4.0.2",
+    "react-scripts": "2.1.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.85.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,16 +19,11 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "postinstall": "cp node_modules/pdfjs-dist/build/pdf.worker.min.js public/pdf.worker.min.js"
 }
